--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ Temporary Items
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,kotlin
+
+target
+*.lock
